# opencode-runtime

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
.opencode-runtime/: corridor-migration.md  oss-pitch.md  roadmap.md
.opencode-runtime/.local/share/opencode/: opencode.db  opencode.db-shm  opencode.db-wal
docs/: cli.md  http-client.md  opencode-config.md  sessions.md  streaming.md  users-and-workspaces.md
src/opencode_harness/: __init__.py  cli.py  client.py  event.py  exceptions.py  harness.py  registry.py  server.py  session.py
src/opencode_runtime/: __init__.py  cli.py  client.py  event.py  exceptions.py  harness.py  process.py  registry.py  response.py  runtime.py  schema.py  server.py  session.py
tests/: test.py  test_cli.py  test_client.py  test_harness.py  test_multi_tenant.py  test_process.py  test_registry.py  test_runtime.py  test_schema.py  test_server.py  test_session.py
